--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.26",
     "lottie-react": "^2.4.1",
     "next": "16.1.0",
     "react": "19.2.3",
